AUTOMAKE_OPTIONS = subdir-objects

noinst_LIBRARIES=libblitz.a

libblitz_a_SOURCES=core/debugl.cpp core/binfile.cpp core/mbinfile.cpp core/bfsys.cpp core/sbinfile.cpp core/memory.cpp core/unzip.c core/stlib.cpp core/misc.cpp core/ioapi.c core/picture.cpp core/picturePack.cpp

libblitz_a_CPPFLAGS= -Ih -std=c++11
